<resources>
    <string name="app_name">Calendar</string>
    <string name="rightBtn"><![CDATA[>]]></string>
    <string name="leftBtn"><![CDATA[<]]></string>
    <string name="o">O</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="check">Check</string>
</resources>
