<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/firstFragment"
    android:background="@color/color_ffffff" >

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_21a4ff"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:textColor="@color/color_ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/sun" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/mon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/tue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/wed" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/thu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/fri" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/xml_border"
            android:gravity="center"
            android:text="@string/sat" />

    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:horizontalSpacing="-1px"
        android:listSelector="@color/transparent"
        android:numColumns="7"
        android:verticalSpacing="-1px"></GridView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/leftBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leftBtn" />

        <Button
            android:id="@+id/rightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rightBtn" />

        <Button
            android:id="@+id/Checker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/check" />

        <TextView
            android:id="@+id/dateViewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
